<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/vista_comida"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow"
    tools:context=".VistaComida">


    <LinearLayout
        android:id="@+id/barrar"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:paddingVertical="10dp"
        android:background="@color/blue_toolight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:layout_marginEnd="100dp"
            android:src="@drawable/logo"
            android:contentDescription="@string/logo"
            />
        <ImageView
            android:id="@+id/iconoSalir"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:layout_marginHorizontal="10dp"
            android:src="@drawable/ic_salir"
            android:contentDescription="@string/icono_salir"
            />
    </LinearLayout>

    <ImageView
        android:id="@+id/imagenComida"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:src="@drawable/comida"
        android:contentDescription="@string/foto_de_comida"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/barrar"/>

    <TextView
        android:id="@+id/kilogramosComida"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/darkred"
        android:fontFamily="@font/chakrapech"
        android:gravity="center"
        android:padding="10dp"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="90dp"
        android:text="@string/kilogramos_actuales_1kg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imagenComida"
        />


    <TextView
        android:id="@+id/vecesRellenados"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/darkred"
        android:fontFamily="@font/chakrapech"
        android:gravity="center"
        android:padding="10dp"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:layout_marginHorizontal="90dp"
        android:text="@string/veces_rellenado_hoy_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/kilogramosComida"
        />

    <TextView
        android:id="@+id/estado"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/darkred"
        android:fontFamily="@font/chakrapech"
        android:gravity="center"
        android:padding="10dp"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:layout_marginHorizontal="90dp"
        android:text="@string/estado_lleno"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vecesRellenados"
        />


    <Button
        android:id="@+id/btnLlenarComida"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="120dp"
        android:fontFamily="@font/chakrapech"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:text="@string/llenar_agua"
        style="@style/Widget.Material3.Button.Icon"
        android:backgroundTint="@color/redR"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/estado"
        />
    <Button
        android:id="@+id/btnVolver"
        style="@style/Widget.Material3.Button.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:backgroundTint="@color/redR"
        android:fontFamily="@font/chakrapech"
        android:paddingHorizontal="35dp"
        android:text="@string/volver"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnLlenarComida" />

</androidx.constraintlayout.widget.ConstraintLayout>