<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow"
    tools:context=".Vistas.AdminMascotaActivity">

    <!-- Barra  -->
    <LinearLayout
        android:id="@+id/barrar"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:paddingVertical="10dp"
        android:background="@color/blue_toolight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:layout_marginEnd="100dp"
            android:src="@drawable/logo"
            android:contentDescription="@string/logo"
            />
        <ImageView
            android:id="@+id/iconoSalir"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:layout_marginHorizontal="10dp"
            android:src="@drawable/ic_salir"
            android:contentDescription="@string/icono_salir"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/barrar">

        <Button
            android:id="@+id/btnComida"
            style="@style/Widget.Material3.Button.Icon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:backgroundTint="@color/redR"
            android:fontFamily="@font/chakrapech"
            android:text="@string/ver_comida"
            android:textSize="25sp" />

        <Button
            android:id="@+id/btnAgua"
            style="@style/Widget.Material3.Button.Icon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:backgroundTint="@color/redR"
            android:fontFamily="@font/chakrapech"
            android:text="@string/ver_agua"
            android:textSize="25sp" />

    </LinearLayout>

    <Button
        android:id="@+id/btnConfiguracion"
        style="@style/Widget.Material3.Button.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:paddingHorizontal="35dp"
        android:backgroundTint="@color/redR"
        android:fontFamily="@font/chakrapech"
        android:text="@string/configuracion_agua_y_comida"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <Button
        android:id="@+id/btnNotificaciones"
        style="@style/Widget.Material3.Button.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:backgroundTint="@color/redR"
        android:fontFamily="@font/chakrapech"
        android:paddingHorizontal="35dp"
        android:text="@string/notificaciones"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnConfiguracion" />

    <Button
        android:id="@+id/btnVolver"
        style="@style/Widget.Material3.Button.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:backgroundTint="@color/redR"
        android:fontFamily="@font/chakrapech"
        android:paddingHorizontal="35dp"
        android:text="@string/volver"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnNotificaciones" />
    


    


</androidx.constraintlayout.widget.ConstraintLayout>