<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow"
    tools:context=".RegistrarActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/borde_oranje"
        android:orientation="vertical"
        android:paddingVertical="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pawmeal"
            android:textStyle="bold"
            android:textSize="48sp"
            android:layout_marginHorizontal="40dp"
            android:background="@color/redR"
            android:textColor="@color/black"
            android:gravity="center"
            android:fontFamily="@font/chakrapech"
            android:layout_marginBottom="10dp"/>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/logo"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registro"
            android:textStyle="bold"
            android:textSize="34sp"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_marginVertical="5dp"
            android:fontFamily="@font/chakrapech"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:hint="@string/correo_electronico"
            app:boxBackgroundColor="@color/blue_toolight"
            android:textColorHint="@color/black"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:fontFamily="@font/chakrapech"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilContraseña1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="10dp"
            android:hint="@string/ingresar_contrase_a"
            app:boxBackgroundColor="@color/blue_toolight"
            android:textColorHint="@color/black"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword1"
                android:fontFamily="@font/chakrapech"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilContraseña2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="10dp"
            android:hint="@string/repetir_contrase_a"
            app:boxBackgroundColor="@color/blue_toolight"
            android:textColorHint="@color/black"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword2"
                android:fontFamily="@font/chakrapech"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnRegistrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="100dp"
            android:layout_marginTop="15dp"
            android:textSize="16sp"
            android:fontFamily="@font/chakrapech"
            android:text="@string/registrar_correo"
            style="@style/Widget.Material3.Button.Icon"
            android:backgroundTint="@color/redR"/>

        <Button
            android:id="@+id/btnVolver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="100dp"
            android:textSize="16sp"
            android:fontFamily="@font/chakrapech"
            android:text="@string/volver"
            style="@style/Widget.Material3.Button.Icon"
            android:backgroundTint="@color/redR"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>