<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/vista_crud_mascota"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow"
    tools:context=".VistaCrudMascotaActivity">

    <LinearLayout
        android:id="@+id/barra"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:background="@color/oranje"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="200dp"
            android:layout_marginStart="30dp"
            android:contentDescription="@string/logo"
            android:layout_weight="1"
            android:src="@drawable/logo" />

        <ImageView
            android:id="@+id/iconoSalir"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:layout_gravity="center_vertical"
            android:layout_marginHorizontal="10dp"
            android:src="@drawable/ic_salir"
            android:contentDescription="@string/icono_salir"
            android:layout_weight="1" />
    </LinearLayout>
    <Button
        android:id="@+id/btnAgregarMascota"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/agregar_mascota"
        android:fontFamily="@font/chakrapech"
        style="@style/Widget.Material3.Button.Icon"
        android:backgroundTint="@color/red"
        app:layout_constraintTop_toBottomOf="@id/barra"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerMascotas"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/btnAgregarMascota"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>